[gd_scene load_steps=13 format=3 uid="uid://drsnmi4pkc6t5"]

[ext_resource type="Script" uid="uid://cvcplcwtt1s7c" path="res://Scripts/hud.gd" id="1_p8haq"]

[sub_resource type="Theme" id="Theme_kaos7"]
default_font_size = 22

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_31rfd"]
bg_color = Color(0.49, 0.49, 0.49, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yppxs"]
bg_color = Color(0.44, 0.44, 0.44, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1qlnu"]
bg_color = Color(0.490196, 0.490196, 0.490196, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p8haq"]
content_margin_left = 2.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 2.0
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.37, 0.37, 0.37, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_left = 8.0
expand_margin_top = 4.0
expand_margin_right = 8.0
expand_margin_bottom = 4.0
shadow_color = Color(0, 0, 0, 0.184314)
shadow_size = 4
shadow_offset = Vector2(3, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kaos7"]
bg_color = Color(0.545098, 0.878431, 0.819608, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0d6x4"]
bg_color = Color(0.545098, 0.878431, 0.584314, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h05n4"]
bg_color = Color(0.740667, 0.88, 0.5456, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8bnre"]
bg_color = Color(0.857707, 0.88, 0.5456, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jyfor"]
bg_color = Color(0.88, 0.707227, 0.5456, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_avvnu"]
bg_color = Color(0.88, 0.590187, 0.5456, 1)

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_p8haq")

[node name="TelemetryWindow" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 27.0
offset_top = 26.0
offset_right = 281.0
offset_bottom = 119.0
theme = SubResource("Theme_kaos7")
theme_override_constants/separation = 0

[node name="Position" type="Label" parent="TelemetryWindow"]
layout_mode = 2
theme_override_constants/outline_size = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_31rfd")
text = "Position: "

[node name="Speed" type="Label" parent="TelemetryWindow"]
layout_mode = 2
theme_override_constants/outline_size = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_yppxs")
text = "Speed:"

[node name="Acceleration" type="Label" parent="TelemetryWindow"]
layout_mode = 2
theme_override_constants/outline_size = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_1qlnu")
text = "Acceleration: "

[node name="LapText" type="Label" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -185.0
offset_top = 28.0
offset_right = -33.0
offset_bottom = 93.0
grow_horizontal = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.28, 0.28, 0.28, 1)
theme_override_constants/outline_size = 7
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_p8haq")
text = "Lap 1/3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlaceText" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = -92.0
offset_right = 183.0
offset_bottom = -27.0
grow_vertical = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0.28, 0.28, 0.28, 1)
theme_override_constants/outline_size = 7
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_p8haq")
text = "1st Place"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SpeedBar" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 84.0
offset_top = 535.0
offset_right = 134.0
offset_bottom = 695.0
rotation = 3.14159

[node name="SpeedSix" type="Label" parent="SpeedBar"]
layout_mode = 2
size_flags_vertical = 1
theme_override_styles/normal = SubResource("StyleBoxFlat_kaos7")

[node name="SpeedFive" type="Label" parent="SpeedBar"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_0d6x4")

[node name="SpeedFour" type="Label" parent="SpeedBar"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_h05n4")

[node name="SpeedThree" type="Label" parent="SpeedBar"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_8bnre")

[node name="SpeedTwo" type="Label" parent="SpeedBar"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_jyfor")

[node name="SpeedOne" type="Label" parent="SpeedBar"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_avvnu")
